--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,72 @@
 body {
   background-color: lightslategray;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
 }
+
+p {
+  font-family: 'Roboto', sans-serif;
+}
+
+header {
+  width: 100%;
+  height: 3em;
+  background-color: darkblue;
+  display: flex;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-text {
+  color: white;
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.content-container {
+  display: flex;
+  margin-top: 4em;
+  width: 75vw;
+  height: 75vh;
+}
+
+.img {
+  object-fit: cover;
+  width: 50%;
+  height: 100%;
+}
+
+.content-text {
+  margin: 1rem;
+  font-size: 1em;
+}
+
+.footer {
+  width: 100%;
+  height: 3em;
+  background-color: darkblue;
+  margin-top: auto;
+}
+
+@media only screen and (max-width: 960px) {
+  .content-container {
+    flex-direction: column;
+    height: fit-content;
+  }
+
+  .img {
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+  }
+
+  .content-text {
+    margin: 1rem 0;
+  }
+} 
