--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,9 @@ header {
 @media only screen and (max-width: 960px) {
   .content-container {
     flex-direction: column;
+    width: 100%;
     height: fit-content;
+    margin-top: 2em;
   }
 
   .img {
